--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="color_sender">#303F9F</color>
     <color name="color_tweet_content">#1c1d22</color>
     <color name="color_self_name">#FFFFFF</color>
+    <color name="comment_background">#e9e9e9</color>
+
 </resources>
