--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
 
 
     <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_marginTop="30dp"
         android:id="@+id/swipe_layout"
         android:padding="@dimen/base_content_padding"
         android:layout_width="match_parent"
