--- a/app/src/main/res/layout/moment_head.xml
+++ b/app/src/main/res/layout/moment_head.xml
@@ -7,7 +7,7 @@
         android:layout_marginBottom="30dp"
         android:id="@+id/profile_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="200dp" />
     <ImageView
         android:id="@+id/head"
         android:layout_margin="10dp"
@@ -18,6 +18,7 @@
     <TextView
         android:text="@string/moments"
         android:id="@+id/nick"
+        android:textColor="@color/color_tweet_content"
         android:layout_alignBottom="@+id/profile_image"
         android:layout_toLeftOf="@+id/head"
         android:layout_width="wrap_content"
